welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:21: error: Unit does not take parameters
 	goAndGet()
                ^